# MTU-ts-annotator

./: .flake8  .gitignore  README.md  machines_notes.md  mypy.ini  pyproject.toml  requirements.txt
artifacts/: .gitignore
src/: all_data.py  annotator.py  labeled_anomalies.py  quantile_filtering.py  straburzynski_score_filtering.py
src/components/: plot_filtered_result.py
src/utils/: measurement.py
