[tool.poetry]
name = "MTU-ts-annotator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.3"
streamlit = "^1.51.0"
streamlit-hotkeys = "^0.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
black = "^23.1.0"
coverage = "^7.2.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pandas-stubs = "^1.5.3.230304"
types-requests = "^2.28.11.15"
types-pillow = "^9.4.0.17"
types-pyyaml = "^6.0.12.9"
coverage-badge = "^1.1.0"
vulture = "^2.7"
types-pycocotools = "^2.0.0.4"
types-colorama = "^0.4.15.20240311"
types-openpyxl = "^3.1.5.20241225"
types-protobuf = "^5.29.1.20241207"
types-psutil = "^6.1.0.20241221"
types-redis = "^4.6.0.20241004"
types-six = "^1.17.0.20241205"
types-tabulate = "^0.9.0.20241207"
types-tqdm = "^4.67.0.20241221"
types-xlrd = "^2.0.0.20250914"

[tool.poetry.group.analysis.dependencies]
fiftyone = "^1.5.2"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | artifacts
  | data
  | notebooks
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = ["src"]
sort_by_size = true
verbose = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
